Updated LinkedList/Priority Queue operations BubbleUp and BubbleDown, in addition to updating an array acting as a hashMap